# reviewops-ai

./: .env.example  .gitignore  README.md  TODO.md  last_webhook.txt
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py  alembic.ini  build_log.txt  pyproject.toml  requirements.txt  reviewops.db
backend/app/: main.py
backend/app/agents/: bug_prediction_agent.py  data_agent.py  deployment_agent.py  documentation_agent.py  embedding_agent.py  exceptions.py  explainability_agent.py  feature_engineering_agent.py  monitoring_agent.py  review_agent.py  reviewer_recommendation_agent.py  security_agent.py  test_generation_agent.py  validation_agent.py
backend/app/api/: deps.py
backend/app/api/routes/: feedback.py  models.py  monitoring.py  pull_requests.py  repositories.py  webhooks.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/db/migrations/versions/: 0001_initial_schema.py  7aeebc398286_initial_schema.py  92d1ed0b04a7_add_phase_3_and_4_review_columns.py
backend/app/db/models/: __init__.py  base.py  feedback.py  pull_request.py  repository.py  review.py  user.py
backend/app/integrations/: github_client.py
backend/app/model_gateway/: cache.py  gateway.py
backend/app/model_gateway/providers/: huggingface.py
backend/app/orchestrator/: graph.py  state.py
backend/app/schemas/: __init__.py  error.py  feedback.py  pull_request.py  repository.py  webhook.py
backend/app/services/: webhook_service.py
backend/app/static_analysis/: __init__.py  bandit_runner.py  base.py  eslint_runner.py  pylint_runner.py  semgrep_runner.py
backend/tests/: __init__.py  conftest.py  test_health.py  test_main.py  test_phase4_agents.py  test_webhooks.py
docs/: architecture.md  design.md  phases.md  prd.md  rules.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/feedback/: page.tsx
frontend/app/dashboard/monitoring/: page.tsx
frontend/app/dashboard/status/: page.tsx
frontend/app/models/: page.tsx
frontend/app/monitoring/: page.tsx
frontend/app/pull-requests/: page.tsx
frontend/app/pull-requests/[id]/: page.tsx
frontend/app/repositories/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: sidebar.tsx
infra/: docker-compose.yml
infra/grafana/provisioning/dashboards/: dashboards.yaml
infra/k8s/: deployment.yaml  ingress.yaml  service.yaml
infra/prometheus/: prometheus.yml
ml-pipeline/: Dockerfile  generate_data.py  metrics_out.json  metrics_out2.json  mlflow.db  mlflow.db-journal  requirements.txt  simulate_drift.py  train.py
ml-pipeline/data/: current.csv  reference.csv
ml-pipeline/reports/: drift_report.html
