[project]
name = "reviewops-ai-backend"
version = "0.1.0"
description = "ReviewOps AI — Autonomous Multi-Agent AI Software Engineering Platform (Backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "python-json-logger>=2.0.0",
    "qdrant-client>=1.9.0",
    "tenacity>=8.3.0",
    "bandit>=1.7.0",
    "pylint>=3.2.0",
    "langgraph>=0.0.26",
    "langchain-core>=0.1.30",
    "mlflow-skinny==2.14.3",
    "setuptools<78",
    "dvc[s3]>=3.40.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
